--- a/JASA/content/me_illustration.tex
+++ b/JASA/content/me_illustration.tex
@@ -124,7 +124,7 @@ Figure \ref{fig:me_local} illustrates the local preferential attachment for Netw
     \begin{minipage}{0.5\textwidth}
         \includegraphics[width=\textwidth]{img/corpus/testset_max_20}
     \end{minipage}
-    \caption{Top: AUC-ROC curves for Network1 (left) and Network2 (right) with 75 percent of data used for learning that compares the performance of models. Bottom: Relative performance of \imb\ and \ifm\ according to the percentage of data used for testing, the rest being used for learning.} 
+    \caption{Top: AUC-ROC curves for Network1 (left) and Network2 (right) with 75 percent of data used for learning that compares the performance of models. Bottom: Relative performance of \imb\ and \ifm\ according to the percentage of data used for testing, the rest being used for learning; the number of training data decreases with the x-axis and a positive value on the y-axis indicates that \imb\ outperforms \ifm.} 
 \label{fig:auc}
 \end{figure}
 
