--- a/JASA/content/preferential_v2.tex
+++ b/JASA/content/preferential_v2.tex
@@ -81,6 +81,7 @@ We now turn to local preferential attachment, as exemplified in \cite{LeskovecBK
 
 
 \subsection{Local preferential attachment}
+\label{sec:local_me}
 
 \subsubsection{ILFM}
 
