--- a/JASA/journal_version.tex
+++ b/JASA/journal_version.tex
@@ -40,6 +40,11 @@
 \usepackage{calc}%    For the \widthof macro
 \usepackage{xparse}%  For \NewDocumentCommand
 
+%\usepackage[notes]{biblatex-chicago}
+%\usepackage[authordate-trad,backend=biber]{biblatex-chicago}
+%\bibliographystyle{chicago}
+%\usepackage[style=chicago-notes]{biblatex}
+%\bibliography{./a}
 
 %\input{./header.tex}
 %%%%%%%%%% Math
@@ -83,7 +88,7 @@
 
 \if1\blind
 {
-  \title{\bf A study of stochastic mixed membership models for link prediction in social networks}
+  \title{\bf Stochastic mixed membership models and preferential attachment in social networks}
   \author{Author 1\thanks{
     The authors gratefully acknowledge \textit{please remember to list all relevant funding sources in the unblinded version}}\hspace{.2cm}\\
     Department of YYY, University of XXX\\
@@ -99,7 +104,7 @@
   \bigskip
   \bigskip
   \begin{center}
-    {\LARGE\bf A study of stochastic mixed membership models for link prediction in social networks}
+    {\LARGE\bf Stochastic mixed membership models and preferential attachment in social networks}
 \end{center}
   \medskip
 } \fi
@@ -124,7 +129,6 @@ We assess here whether standard stochastic mixed membership models are adapted f
 \input{content/concl}
 
 ~\\
-
 
 \bibliographystyle{chicago}
 \bibliography{./a}
