--- a/JASA/content/intro.tex
+++ b/JASA/content/intro.tex
@@ -2,22 +2,25 @@
 \section{Introduction}
 \label{sec:intro}
 
-Several powerful relational learning models have been proposed to solve the problem commonly referred to as \textit{link prediction} that consists in predicting the likelihood of a future association between two nodes in a network \cite{LibenNowell07,HassanZaki11}. Among such models, the class of stochastic mixed membership models has received much attention as such models can be used to discover hidden properties and infer new links in social networks. Two main models in this class have been proposed and studied in the literature: the latent feature model \cite{BMF} and its non-parametric extension \cite{ILFRM}, and the mixed-membership stochastic block model \cite{MMSB}, and its non parametric extension \cite{iMMSB,fan2015dynamic}. More generally, these models fall in the category of mixed-membership models who establish a common theoretical framework that encompass a wide range of models (such as admixture and topic model) that are able to  learn complex patterns from structured data \cite{airoldi2014handbook}.~\\
-Nevertheless, although drawn from a wide range of domains, real world social networks exhibit general properties and one can wonder if these models are able to capture these properties. In this work, we focus on the \textit{preferential attachment} effect \cite{Newman2010, Barabasi2003}. Preferential attachment states that a vertex is more likely to create connections with vertices having a high degree. In graph theory, preferential attachment is used to explain the emergence of scale-free networks that are characterized by a power-law degree distribution. The aim of our study is to assess to which extent link prediction models, as the ones mentioned above, comply with this property. However, as these models belong to the family of Bayesian model,  we can study their behavior in two settings.  In the first one, denoted $\mathcal{M}_g$, we consider the model as a pure generative model and given the parameters, we use it to generate artificial networks. Like this, we can study the model properties based on their expectation over the random parameters. In the second setting, denoted $\mathcal{M}_e$ and corresponding to the typical use of these models for link prediction, we consider that the parameters are unknown but some observations (\textit{i.e.} an existing network ) are available and are used to estimate the distribution underlying the models. 
+Several powerful relational learning models have been proposed to solve the problem commonly referred to as \textit{link prediction} that consists in predicting the likelihood of a future association between two nodes in a network \cite{LibenNowell07,HassanZaki11}. Among such models, the class of stochastic mixed membership models has received much attention as such models can be used to discover hidden properties and infer new links in social networks. Two main models in this class have been proposed and studied in the literature: the latent feature model \cite{BMF} and its non-parametric extension \cite{ILFRM}, and the mixed-membership stochastic block model \cite{MMSB}, and its non parametric extension \cite{iMMSB,fan2015dynamic}. These models fall in the category of mixed-membership models that encompasses a wide range of models (such as admixture and topic model) able to  learn complex patterns from structured data \cite{airoldi2014handbook}.
 
+Nevertheless, although drawn from a wide range of domains, real world social networks exhibit general properties and one can wonder if these models are able to capture these properties. In this work, we focus on the \textit{preferential attachment} effect \cite{Newman2010, Barabasi2003}. Preferential attachment states that a nodes is more likely to create connections with nodes having many conections. In graph theory, preferential attachment is used to explain the emergence of scale-free networks that are characterized by a power-law degree distribution. The aim of our study is to assess to which extent stochastic mixed membership models comply with this property.
+%However, as these models belong to the family of Bayesian model,  we can study their behavior in two settings.  In the first one, denoted $\mathcal{M}_g$, we consider the model as a pure generative model and given the parameters, we use it to generate artificial networks. Like this, we can study the model properties based on their expectation over the random parameters. In the second setting, denoted $\mathcal{M}_e$ and corresponding to the typical use of these models for link prediction, we consider that the parameters are unknown but some observations (\textit{i.e.} an existing network ) are available and are used to estimate the distribution underlying the models. 
 
-The remainder of the paper is organized as follows: in the next section (Section~\ref{sec:rel-work}), we present the related work. In Sections~\ref{sec:background} and \ref{sec:inference}, we describe the main stochastic mixed membership models used for link prediction in social networks, relying on their non-parametric version that generalizes the parametric one and we present the settings $\mathcal{M}_g$ and $\mathcal{M}_e$ according to which we study their compliance to preferential attachment. In Section \ref{sec:burstiness}, we introduce formal definitions of preferential attachment and study how stochastic mixed membership models relate to them. In Section~\ref{sec:exps}, we illustrate our theoretical development on two synthetic networks and two real networks, prior to restate our conclusions in Section~\ref{sec:concl}. 
+The remainder of the paper is organized as follows: the related work is presented in Section~\ref{sec:rel-work}; in Section~\ref{sec:background}, we describe the two main stochastic mixed membership models used for link prediction in social networks and studied here, relying on their non-parametric version that generalizes the parametric one; in Section \ref{sec:burstiness}, we introduce formal definitions of preferential attachment and study how stochastic mixed membership models relate to them. In Section~\ref{sec:exps}, we illustrate our theoretical development on two synthetic networks and two real networks, prior to state our conclusions in Section~\ref{sec:concl}.
 
 \section{Related Work}
 \label{sec:rel-work}
 
-Recently,  the class of stochastic mixed membership models have been successfully used for link prediction and structure discovery in social networks.  In \cite{AMMSB}, the authors  propose an adaptation of mixed-membership stochastic block model (MMSB), called a-MMSB where "a" stands for assortative, and they used it for discovering overlapping communities in large size networks having millions of nodes since a-MMSB  scales well using stochastic variational inference. They constrained the weight matrix to have weights in the diagonal and a fixed small value elsewhere. A non parametric dynamic version of MMSB model has also been introduced to  handle temporal networks \cite{fan2015dynamic}. The latent feature model (LFM) has also been extended in several way, to handle non-negative weights in \cite{IMRM} and with a more subtle latent feature structure in \cite{ILAM}. Nevertheless, the characterization of these models with regards to the properties of the networks remains to be explored \cite{jacobs2014unified}. ~\\
+Recently,  the class of stochastic mixed membership models has been successfully used for link prediction and structure discovery in social networks. For example, in \cite{AMMSB}, the authors  propose an adaptation of mixed-membership stochastic block model (MMSB) called a-MMSB, where "a" stands for assortative, and use it for discovering overlapping communities in large networks having millions of nodes. The weight matrix is constrained to have a fixed small value outside its diagonal. A non parametric dynamic version of MMSB model has also been introduced to  handle temporal networks \cite{fan2015dynamic}. The latent feature model (LFM) has also been extended in several ways, to handle non-negative weights in \cite{IMRM} and with a more subtle latent feature structure in \cite{ILAM}. Nevertheless, the characterization of these models with regards to the properties of the networks remains to be explored, as mentioned in \cite{jacobs2014unified}.
 
-In this article, we focus on \textit{preferential attachment} \cite{Newman2010, Barabasi2003}. The interest of this property has been widely emphasized in previous works notably for modeling and generating networks reflecting properties of real networks, as in the Barab\`asi-Albert model \cite{albert2002statistical} or Buckley and Osthus model \cite{Buckley2001} that integrate a preferential attachment mechanism or in the Dancer model for generating dynamic attributed networks with community structure \cite{Largeron2017}. Preferential attachment has also  been exploited for improving the results obtained in classical tasks such as community detection \cite{Ciglan2013} or link prediction \cite{Zeng2016}. \\
+In this article, we focus on \textit{preferential attachment}, a well known property of social networks \cite{Newman2010, Barabasi2003}. This property has been emphasized in previous studies, for example for modeling and generating artificial networks reflecting properties of real networks, as in the model by Barab\`asi-Albert \cite{albert2002statistical}, the model by Buckley and Osthus \cite{Buckley2001}, which integrate a preferential attachment mechanism, or in the Dancer model for generating dynamic attributed networks with community structures \cite{Largeron2017}. Preferential attachment has also  been exploited for improving the results obtained in classical tasks such as community detection \cite{Ciglan2013} or link prediction \cite{Zeng2016}.
 
-That said, few theoretical works have been done to study to what extent models comply with this property. 
+That said, few theoretical works have been conducted to study to what extent stochastic models comply with this property. 
 Orbanz and Roy  pointed out that models belonging to the family of infinitely exchangeable Bayesian graph models cannot generate sparse networks and are thus less compatible with power law degree distributions \cite{orbanz2015bayesian}. Consequently, Lee \textit{et al.}  proposed a random network model in order to capture the power law typical of the degree distribution in social networks \cite{Lee2015}. However the model remains challenging to use in practice, especially for link prediction, due to the relaxation of the exchangeability assumption.~\\
 
 % Concerning the homophily effect, \cite{hoff2008modeling} pointed out that the latent eigen model (called MLFM, an extension of LFM) can comply with both homophily and stochastic equivalence in undirected graphs but without providing a formal definitions of these properties. Furthermore, Li \textit{et al.}, suggest that the latent eigen model  MLFM fails to model homophily  for directed graphs and, for correcting that, designed the GLFM model \cite{Li11}.~\\
 
-Following these previous studies, we study, in a theoretical way, how the non-parametric versions of the classical stochastic mixed membership models handle preferential attachment. For this purpose, we introduce formal definitions of this phenomenon and then study how the models behave with respect  to these definitions but, first,  we present these models and the settings in which we study their behavior.
+A preliminary version of this study was published in \cite{dulac-dsaa}. However, the definitions of preferential attachment and local degrees we proposed in this paper are not entirely satisfying inasmuch as the dynamic aspect of preferential attachment was not taken into account. The definitions we propose here and the developments concerning stochastic block models are new and we believe better founded than in this previous work.
+
+We study, in a theoretical way, how the non-parametric versions of the classical stochastic mixed membership models handle preferential attachment. For this purpose, we introduce formal definitions of this phenomenon and then study how the models behave with respect  to these definitions but, first,  we present these models and the settings in which we study their behavior.
