--- a/JASA/content/preferential_v2.tex
+++ b/JASA/content/preferential_v2.tex
@@ -1,163 +1,106 @@
 \section{Preferential attachment}
 \label{sec:burstiness}
 
-The preferential attachment effect can be observed directly over the global network, or indirectly on latent classes.
+We first study global preferential for the models ILFM and IMMSB in the two contexts defined by $\mathcal{M}_g$ and $\mathcal{M}_e$. We then turn our attention to local preferential attachment.
+%The preferential attachment effect can be observed directly over the global network, or indirectly on latent classes.
 
 \subsection{Global preferential attachment}
 
-Stochastic block models lead to the following generative process for links \footnote{For simplicity in the notation, we consider that nodes can be linked to themselves. Excluding such links does not raise particular problems.} :
+Probabilistic models naturally lead to the following generative process for creating links between nodes in a network\footnote{For simplicity in the notation, we consider that nodes can be linked to themselves. Excluding such links does not raise particular problems.}. This process considers all possible pairs of nodes in turn and generates or not a link between them:
 
-\begin{align*}
-    &\textrm{For each node } i \in \{1, .., N\}  \\
-    &\qquad\textrm{For each node } j \in \{1, .., N\}; \\
-    &\quad \qquad\textrm{generate a link between } i \textrm{ and } j \textrm{ with probability} \\
-    &\quad \qquad P(y_{ij}=1 | \mathcal{M})
-\end{align*}
+\begin{enumerate}
+ \item For each node $i \in \{1, .., N\}$,
+ \item For each node $j \in \{1, .., N\}$,
+ \item Generate a link between $i$ and $j$ with probability $P(y_{ij}=1 | \mathcal{M})$ where $\mathcal{M}$ is either $\mathcal{M}_e$ or $\mathcal{M}_g$.
+\end{enumerate}
 
-Where $\mathcal{M}$ is either $\mathcal{M}_e$ or $\mathcal{M}_g$.
-
-This process, for any given node $i$, considers all nodes in turn, from node 1 to node $N$. The indexing, i.e. the mapping between nodes and integers in $[1..N]$, is however arbitrary and the results that follow are \textcolor{red}{indexed?} for every all possible indexing.
+As one can note, this process considers all nodes in turn, from node 1 to node $N$. Any indexing, \textit{i.e.} a mapping between nodes and integers in $\{1,\cdots,N\}$, is however arbitrary and conclusions drawn from the above process should be independent of the indexing. As we will see, the results we establish below are indeed independent of the indexing.
 
 For a given node $i$ at step $p$ of the above process, $p$ nodes, from node 1 to node $p$, have been considered and links from these nodes to node $i$ generated or not. We will denote by $d_i^{(p)}$ the degree of node $i$, i.e. the number of links of node $i$, at the $p^{th}$ step of this process. By definition:
-
+%
 \begin{equation} \label{eq:degree_def}
 d_i^{(p)} = \sum_{j=1}^p y_{ij}
 \end{equation}
-
-The following definition \textcolor{red}{?} how a model $\M$ (as defined above) behaves \textit{w.r.t.} the global preferential preferential attachment.
-
+%
+As mentioned before, preferential attachment characterizes the propensity of nodes in social networks to connect to nodes that already have a lot of connections and can be stated as \textit{the higher the number of links a node has, the more likely it will get new links}. The following definition directly captures this idea:
+%
 \begin{definition}[global preferential attachment]
-Let $\M$ be a model as defined above. We say that $\M$ satisfies the global preferential attachment effect iff for any indexing, for node $i$, $1 \leq i \leq N$ and $p$, $1 \leq p < N$; 
-$P(d_i^{(N)} \geq n+1 | d_i^{(p)} = n; \M)$ increases with $n$, $1 \leq n < p$.
-
-If $P(d_i^{(N)} \geq n+1 | d_i^{(p)} = n; \M)$ is independent of $n$, the model is said to be neutral \textit{w.r.t.} the global preferential attachment effect.
-
+We say that a probabilistic model satisfies the global preferential attachment effect iff for any indexing, for node $i, \, 1 \leq i \leq N$, for any $p, \, 1 \leq p < N$, $P(d_i^{(N)} \geq n+1 | d_i^{(p)} = n; \M)$ increases with $n$ ($1 \leq n < p$). If $P(d_i^{(N)} \geq n+1 | d_i^{(p)} = n; \M)$ is independent of $n$, the model is said to be neutral \textit{w.r.t.} the global preferential attachment effect. As before, $\mathcal{M}$ is either $\mathcal{M}_e$ or $\mathcal{M}_g$.
 \end{definition}
+%
+Thus, a model satisfies the global preferential attachment effect iff the more links a node $i$ has at some point in the process, the more likely a new link will be created with that node.
 
-This definition directly translates the fact that the more links a node $i$ has at some point in the process, the more likely a new link will be created with that node. This is exactly the preferential attachment effect.
-
-For both ILFM and IMMSB, in $\M_e$, the generation of links are independent of each other. The fact that $n$ links have been created after $p$ steps has no impact on the future links to a given node. In $\M_g$, as one first needs to generate $F$ and $\Phi$ prior to generate all the links, a similar behavior is likely to be observed. Intuitively thus, both ILFM and IMMSB are neutral \textit{w.r.t.} the global preferential attachment effect. The following property formalizes this intuition.
-
-
+For both ILFM and IMMSB, in $\M_e$, the generation of links are independent of each other. The fact that $n$ links have been created after $p$ steps has no impact on the future links to a given node. In $\M_g$, as one first needs to generate $F$ and $\Phi$ prior to generate all the links, a similar behavior is likely to be observed. Intuitively thus, both ILFM and IMMSB are neutral wrt the global preferential attachment effect. The following property formalizes this intuition.
+%
 \begin{proposition}[Global preferential attachment] \label{th:mg_glob}
-Both ILFM and IMMSB, for both $\M_e$ and $\M_g$, are neutral \textit{w.r.t.} the global preferential attachment effect.
+Both ILFM and IMMSB, for both $\M_e$ and $\M_g$, are neutral wrt the global preferential attachment effect.
 \end{proposition}
-
+%
 \begin{proof}
 We first consider model $\M_e$. Fix any indexing, a node $i$, $i \leq i \leq N$, and a step $p$, $1 \leq p < N$. One has, $\forall n, 1 \leq n < p$ :
-
+%
 \begin{align*}
 P(d_i^{(N)} \geq n+1 | d_i^{(p)}=n, \M_e) &= 1 - P(d_i^{(N)}=n | d_i^{(p)}=n, \M_e) \\
         &= 1 -P(y_{i,p+1}=0, ...,y_{iN}=0 | \M_e ) \\
         &= 1 - \prod_{j=p+1}^N P(y_{ij}=0 | \M_e)
 \end{align*}
-
-where the last equality comes from the fact that, in $\M_e$, links are independently generated.
-
-Similarly:
-
+%
+where the last equality comes from the fact that, in $\M_e$, links are independently generated. Similarly:
+%
 \begin{align*}
 P(d_i^{(N)} \geq n+2 | d_i^{(p)}=n+1, \M_e) &= 1 - \prod_{j=p+1}^N P(y_{ij}=0 | \M_e) \\
                     &=P(d_i^{(N)} \geq n+1 | d_i^{(p)}=n, \M_e)
 \end{align*}
+%
+which shows that both ILFM and IMMSB are neutral wrt to global preferential attachment with $\M_e$.
 
-This completes the proof for $\M_e$.
-
-For $\M_g$, it suffices to observe that the observe result is true for any $F, \Phi$ and that:
-
+For $\M_g$, it suffices to observe that:
+%
 \begin{equation*}
-P(d_i^{(N)} \geq n+1 | d_i^{(p)}=n, \M_g)  = \int\int_{F,\Phi} P(F|\M_g)P(\Phi|\M_g) P(d_i^{(N)} \geq n+1 | d_i^{(p)}=n, F, \Phi) \ dF d\Phi
+P(d_i^{(N)} \geq n+1 | d_i^{(p)}=n, \M_g)  = \int_{\M_e} P(\M_e|\M_g) P(d_i^{(N)} \geq n+1 | d_i^{(p)}=n, \M_e) \ d\M_e
 \end{equation*}
-
-As $P(d_i^{(N)} \geq n+1 | d_i^{(p)}=n, F, \Phi) = P(d_i^{(N)} \geq n+2 | d_i^{(p)}=n+1, F, \Phi)$, one has:
+%
+As the models are neutral with $\M_e$, $P(d_i^{(N)} \geq n+1 | d_i^{(p)}=n, \M_e) = P(d_i^{(N)} \geq n+2 | d_i^{(p)}=n+1, \M_e)$ and thus:
+%
 \begin{equation*}
 P(d_i^{(N)} \geq n+2 | d_i^{(p)}=n+1, \M_g) = P(d_i^{(N)} \geq n+1 | d_i^{(p)}=n, \M_g)
 \end{equation*}
-
+%
+which completes the proof. \hspace{11cm} $\Box$
 \end{proof}
-
-
-We now turn to local preferential attachment, as exemplified in \cite{LeskovecBKT08}
-
+%
+We now turn to local preferential attachment that deals with the fact that preferential attachment can be also observed within classes of nodes, as exemplified in \cite{LeskovecBKT08}. The classes we consider here are the latent classes of the stochastic mixed-membership models.
 
 \subsection{Local preferential attachment}
 \label{sec:local_me}
 
-\subsubsection{ILFM}
+\paragraph{Local preferential attachement for ILFM}
 
-For ILFM, the situation \textit{w.r.t.} to local preferential attachment is very similar to the one for global preferential attachment.
-This is due to the fact that, in $\M_e$ (i.e. given $F$ and $\Phi$), a local degree can be defined in the same way as the global degree above.
+For ILFM, the situation wrt to local preferential attachment is very similar to the one for global preferential attachment. This is due to the fact that, in $\M_e$ (i.e. given $F$ and $\Phi$), a local degree can be defined in the same way as the global degree above.
 
 Considering the same generative process as before, for $\M_e$ and ILFM, the local degree in class $k$, $0\leq k\leq K-1$, for a node $i$ such that $f_{ik}=1$ is defined by:
-
+%
 \begin{equation*}
 d_{i,k}^{(p)} = \sum_{j=1, f_{jk}=1}^p y_{ij}
 \end{equation*}
-
-Note that if $f_{ik}=0$, $d_{i,k}^{(p)} = 0$ for all $p$.
-
-This then leads to the following definition at the local preferential attachment for ILFM.
-
+%
+Note that if $f_{ik}=0$, $d_{i,k}^{(p)} = 0$ for all $p$. This then leads to the following definition at the local preferential attachment for ILFM.
+%
 \begin{definition}[ILFM - local preferential attachment, $\M_e$]
-
-We say that ILFM, in $\M_e$ satisfies the local preferential attachment iff for any indexing, for any node $i$, $1\leq i \leq N$ such that $f_{ik}=1$, and for any step $p$, $1\leq p < N$:
-
-\begin{equation*}
-P(d_{i,k}^{(N)} \geq n+1 | d_{i,k}^{(p)}=n,\M_e) \textrm{ increases with } n , 1\leq n < p
-\end{equation*}
-
-if $P(d_{i,k}^{(N)} \geq n+1 | d_{i,k}^{(p)}=n,\M_e)$ is independent of $n$, the model is said to be neutral \textit{w.r.t.} to the local preferential attachment effect.
-
+We say that ILFM, in $\M_e$, satisfies the local preferential attachment iff for any indexing, for any node $i, \, 1\leq i \leq N$ such that $f_{ik}=1$, and for any step $p, \, 1\leq p < N$, $P(d_{i,k}^{(N)} \geq n+1 | d_{i,k}^{(p)}=n,\M_e)$ increases with $n$ ($1\leq n < p$). If $P(d_{i,k}^{(N)} \geq n+1 | d_{i,k}^{(p)}=n,\M_e)$ is independent of $n$, the model is said to be neutral wrt to the local preferential attachment effect.
 \end{definition}
+%
 As before we have the following property.
-
+%
 \begin{proposition}
-ILFM, for $\M_e$, is neutral \textit{w.r.t.} the local preferential attachment effect.
+ILFM, with $\M_e$, is neutral \textit{w.r.t.} the local preferential attachment effect.
 \end{proposition}
 
 \begin{proof}
 The proof is identical to the first part of the proof for Property \ref{th:mg_glob}.
 \end{proof}
 
-The definition of the local degree we have used does not directly translate to $\M_g$ as it is based on the knowledge of $F$. One can nevertheless define an expected local degree for $\M_g$ as:
-
-\begin{align*}
-gd_{ik}^{(p)} &= \E_{F,\Phi}[d_{i,k}^{(p)}] \\
-    &= \int\int_{F, \Phi} P(F|\M_g)P(\Phi|\M_g) d_{i,k}^{(p)}\ dF d\Phi
-\end{align*}
-
-A notion of local preferential attachment for $\M_g$ can then be defined on the basis of this expected local degree.
-
-\begin{definition}[ILFM - local preferential attachment, $\M_g$]
-We say that ILFM in $\M_g$ satisfies the local preferential attachment effect iff for any indexing, for any node $i$, $1 \leq i \leq N$, for any step $p$, $1 \leq p < N, \exists \epsilon \in ]0,1[$ s.t:
-
-\begin{equation*}
-P(gd_{i,k}^{(N)} \geq x + \epsilon | gd_{i,k}^{(p)} \geq x, \M_g) \textrm{ increases with } x, x \in ]0,N[.
-\end{equation*}
-
-\end{definition}
-
-\textcolor{red}{Include a ref about Continuous burstiness}
-
-One has $\forall \epsilon \in ]0,1[, x \in ]0,N[$ :
-\begin{align*}
-P(gd_{i,k}^{(N)} \geq x + \epsilon | gd_{i,k}^{(p)} \geq x, \M_g) &= 1 - P(gd_{i,k}^{(N)} =x | gd_{i,k}^{(p)} = x, \M_g) \\
-    &= 1 - P(y_{ip+1}=0, ..., y_{iN}=0  | \M_g)
-\end{align*}
-
-Where the last equation derives from the definition of $gd_{i,k}^{(p)}$ ($gd_{i,k}^{(N)} = gd_{i,k}^{(p)}$ iff $y_{ip+1}=...=y_{iN}=0$).
-
-\textcolor{red}{But do you implicitly assume here, that $f_{jk}=1$ for $j \in (p+1,.., N)$ ? what if it is not the case ? Why the number of 1 in the $j \geq p+1$ woudld not be dependent of $x$}
-
-The last quantity is independent of $x$, leading to:
-
-\begin{proposition}
-ILFM with $\M_g$ is neutral \textit{w.r.t.} the local preferential attachment effect.
-
-\end{proposition}
-
-\subsubsection{IMMSB}
-
+\paragrap{IMMSB and local preferential attachment}
 For IMMSB in $\M_e$, the situation is similar to the one of ILFM in $\M_g$ as we do not have a direct access to classes, encoded in the $Z$ variables.
 
 One can nevertheless define  local random variables $y_{ij,k}$ that are 1 if a link is generated between nodes $i$ and $j$ within class $k$ and 0 otherwise. One has:
