--- a/JASA/content/illustration_v2.tex
+++ b/JASA/content/illustration_v2.tex
@@ -1,5 +1,4 @@
-
-\subsection{Illustration}
+\section{Illustration}
 \label{sec:exps}
 
 To illustrate our theoretical results, we evaluate the predictive performance and the ability of the models to capture the preferential attachment on artificial and real networks. In order to evaluate this property we used several measures.
