--- a/JASA/content/models.tex
+++ b/JASA/content/models.tex
@@ -1,5 +1,4 @@
-
-\section{Backround Models}
+\section{Stochastic Mixed Membership Models}
 \label{sec:background}
 
 Stochastic mixed membership models are generative models that rely on latent factors (also called latent \textit{classes} or \textit{features}) that represent hidden properties of nodes ,corresponding to individuals, in the graph $G=(V,E)$ associated to the social network.
@@ -62,3 +61,29 @@ We have this time four real hyper-parameters, two for the Hierarchical Dirichlet
 	\caption{The two graphical representations of (left) the latent feature model and (right) the latent class model. The difference between the two graphical structures of  models lies in the way representations are associated to nodes: a fixed representation is used in the case of the latent feature model, whereas the representation in the latent class model varies according to the link considered.}
 	\label{fig:mmm}
 \end{figure}
+
+\paragraph{Settings} In a Bayesian context, the set of hyper-parameters underlying the model considered is known. This set, denoted $\mg$, respectively corresponds to $\alpha$ and $\sigma_w$ for \ifm\ and to $\gamma$,  $\alpha_0$, $\lambda_0$ and $\lambda_1$ for \imb. For mixed membership models, the evidence $\p(Y|\mg)$ has no closed form solution. Yet, the random graph $G$ is exchangeable so that, for any permutation $\pi$ on integers, one has:
+%
+\[
+P((y_{ij})_{i,j\in \mathcal{R}} | \mg) = P((y_{\pi(i)\pi(j)})_{i,j\in \mathcal{R}} | \mg)
+\]
+%
+and one can generate networks from $\mg$ by following the generative processes described above for \ifm\ and \imb. In this setting, the question we ask ourselves is whether the networks generated from $\mg$ comply with the preferential attachment effect.
+
+However, the typical use of the above models corresponds to the scenario in which some observations (\textit{i.e.} an existing network, observed till a certain time) are available and are used to estimate $\mat{F}$ and $\mat{\Phi}$ from which new links are created. The estimation of $\mat{F}$ and $\mat{\Phi}$ is based on:
+%
+\begin{equation}
+    \p(F, \Phi | Y, \mg) = \frac{\p(Y|F,\Phi)\p(F|\mg)\p(\Phi|\mg)}{\p(Y|\mg)}
+\end{equation}
+%
+and usually makes use of standard Gibbs sampling and Metropolis-Hastings algorithms\footnote{We do not detail the inference of  $\mat{\hat{F}}$ and $\mat{\hat{\Phi}}$ here and refer the interested reader to \cite{ILFRM,IBP,HDP,fan2015dynamic}.}
+
+In the remainder, we denote by $\mat{\hat{F}}$ and $\mat{\hat{\Phi}}$, for both \ifm\ and \imb, the estimates of $\mat{F}$ and $\mat{\Phi}$ obtained from $\mg$ and $Y$, and furthermore set $\me = \{\mat{\hat{F}},\mat{\hat{\Phi}}\}$. Whether, from the learned parameters $\mat{\hat{F}}$ and $\mat{\hat{\Phi}}$, the new links generated produce networks that comply with the preferential attachment effect is the second question we ask ourselves in this study.
+
+We now propose a formalization of preferential attachment in social networks and answer the above questions.
+
+%In the rest of this paper, we will refers to both context in which we study a Bayesian model, and we recall here the fundamental property of each one :
+%\begin{itemize}
+%    \item $\mg$ that represents the set of hyperparameters of $\mathcal{M}$, such that the random graph $G$ is exchangeable, thus for any permutation $\pi$ on integers, one has: \[ P((y_{ij})_{i,j\in \mathcal{R}} | \mg) = P((y_{\pi(i)\pi(j)})_{i,j\in \mathcal{R}} | \mg) \]
+%    \item $\me$ that represents the set of elements ($\bm{F}$ and $\bm{\Phi}$) \textbf{ CL :  $\me = \{\hat F,  \hat \Phi \}$ ?} of $\mathcal{M}$ such that interactions are conditionally independent:  \[P((y_{ij})_{i,j\in \mathcal{R}} | \me) = \prod_{i,j\in \mathcal{R}} P(y_{ij} | \me)  \]
+%\end{itemize}
